<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:visibility="visible"
    tools:context="com.example.yeray.myapplication.MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="430dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewCodigo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/codigo" />

        <EditText
            android:id="@+id/txtCodigo"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="number" />


        <TextView
            android:id="@+id/textViewNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Nombre_clie" />

        <EditText
            android:id="@+id/txtNombre"
            android:layout_width="wrap_content"
            android:layout_height="57dp"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="text">


            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/textViewDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion" />

        <EditText
            android:id="@+id/txtDireccion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />


        <TextView
            android:id="@+id/TextviewLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latitud" />

        <EditText
            android:id="@+id/txtLatitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewLongitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Longitud" />

        <EditText
            android:id="@+id/txtLongitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textViewHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/horario" />

        <EditText
            android:id="@+id/txtHorario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <Button
            android:id="@+id/btnInsertar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ins" />

        <Button
            android:id="@+id/btnActualizar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/act" />

        <Button
            android:id="@+id/btnEliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elim" />

        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cons" />

    </LinearLayout>


</RelativeLayout>
