<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.yeray.myapplication.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/mensaje_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

        <TextView
            android:id="@+id/mensaje_id2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="194dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnConsultar"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:text="@string/añadir_clientes" />


        <Button
            android:id="@+id/btnMostrarClientes"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ver_clie" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="152dp">


        <Button
            android:id="@+id/btn_irAMaps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ir_aruta" />

        <Button
            android:id="@+id/btnVerClientes"
            android:layout_width="11dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/clientes" />

        <Button
            android:id="@+id/btnIrMapsActivity"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ir_MapsActivity" />


    </LinearLayout>


    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="119dp"
        android:text="Resutados" />



</RelativeLayout>